--- a/estilos.css
+++ b/estilos.css
@@ -130,7 +130,7 @@ header{
 }
 
 body{
-	background-image: url(../imagenes/fondo.jpg);
+	background-image: url(fondo.jpg);
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 320vh;
